# vcflib

./: .cproject  .gitignore  .gitmodules  .project  .pydevproject  .travis.yml  BedReader.h  CMakeLists.txt  LICENSE  Makefile  Makefile.common  Makefile.external-libs  Makefile.old  README  README.md  RELEASE_NOTES.md  Split.cpp  Split.h  TODO.md  VERSION  Variant.cpp  Variant.h  convert.h  guix-clang.scm  guix-container-manifest.scm  guix.scm  join.h  mt19937ar.h  sample.vcf.gz.tbi  setup.py  spike_vcflib.py  split.h  ssw.h  ssw_cpp.h  test.py  test_vcflib.py  test_vcfnp.py  vcf-allele-freq.cpp  vcf2fasta.cpp  vcf2sqlite.py  (+69 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci_test.yml  issue-tracker-bot.yaml  support-tracker-bot.yaml
1KG_Index/: 1KG_IDs.txt  1kG_ethnic_index.py  README
contrib/c-progress-bar/: LICENSE  README.md  progress.c  progress.h
doc/: abba-baba.md  bFst.md  dumpContigsFromHeader.md  genotypeSummary.md  hapLrt.md  iHS.md  meltEHH.md  normalize-iHS.md  pFst.md  pVst.md  permuteGPAT++.md  permuteSmooth.md  plotHaps.md  popStats.md  pyvcflib.md  segmentFst.md  segmentIhs.md  sequenceDiversity.md  smoother.md  vcf2dag.md  vcf2fasta.md  vcf2tsv.md  vcfaddinfo.md  vcfafpath.md  vcfallelicprimitives.md  vcfaltcount.md  vcfannotate.md  vcfannotategenotypes.md  vcfbreakmulti.md  vcfcat.md  vcfcheck.md  vcfclassify.md  vcfcleancomplex.md  vcfcombine.md  vcfcommonsamples.md  vcfcountalleles.md  vcfcreatemulti.md  vcfdistance.md  vcfecho.md  vcfentropy.md  (+49 more)
examples/: xp-phased.txt  xp-unphased.txt
man/: abba-baba.1  bFst.1  dumpContigsFromHeader.1  genotypeSummary.1  hapLrt.1  iHS.1  meltEHH.1  normalize-iHS.1  pFst.1  pVst.1  permuteGPAT++.1  permuteSmooth.1  plotHaps.1  popStats.1  pyvcflib.1  segmentFst.1  segmentIhs.1  sequenceDiversity.1  smoother.1  vcf2dag.1  vcf2fasta.1  vcf2tsv.1  vcfaddinfo.1  vcfafpath.1  vcfallelicprimitives.1  vcfaltcount.1  vcfannotate.1  vcfannotategenotypes.1  vcfbreakmulti.1  vcfcat.1  vcfcheck.1  vcfclassify.1  vcfcleancomplex.1  vcfcombine.1  vcfcommonsamples.1  vcfcountalleles.1  vcfcreatemulti.1  vcfdistance.1  vcfecho.1  vcfentropy.1  (+49 more)
paper/: plos_latex_template.aux  plos_latex_template.blg  plos_latex_template.tex
profile/: vcfnp_calldata.py  vcfnp_info.py  vcfnp_samples.py  vcfnp_variants.py
pyvcflib/: cvcflib.pyd  cvcflib.pyx  setup.py
samples/: 10134514.vcf  10158243-after-vcfwave-overlapping-genotype.vcf  10158243-after-vcfwave.vcf  10158243.vcf  1kGP_high_coverage_Illumina.chr1.filtered.SNV_INDEL_SV_phased_panel-head-1000.vcf.gz.tbi  1kg-phaseIII-v5a.20130502.genotypes.chr22-16-16.5mb.vcf.gz.tbi  512184.vcf  empty.vcf  grch38#chr4_10083863-10181258.vcf  grch38#chr8_36353854-36453166-bcftools-normalised.vcf  grch38#chr8_36353854-36453166.vcf  sample.vcf  test-dup.vcf  test-multi.vcf  test_variant_drop.vcf  vcfcreate-multi.vcf
scripts/: bed2region  bgziptabix  plotBfst.R  plotHapLrt.R  plotHaplotypes.R  plotPfst.R  plotSmoothed.R  plotWCfst.R  plotXPEHH.R  plot_roc.r  vcf2bed.py  vcf2sqlite.py  vcf_strip_extra_headers  vcfbiallelic  vcfclearid  vcfclearinfo  vcfcomplex  vcffirstheader  vcfgtcompare.sh  vcfindelproximity  vcfindels  vcfjoincalls  vcfmultiallelic  vcfmultiway  vcfmultiwayscripts  vcfnobiallelicsnps  vcfnoindels  vcfnosnps  vcfnulldotslashdot  vcfplotaltdiscrepancy.r  vcfplotaltdiscrepancy.sh  vcfplotsitediscrepancy.r  vcfplottstv.sh  vcfprintaltdiscrepancy.r  vcfprintaltdiscrepancy.sh  vcfqualfilter  vcfregionreduce  vcfregionreduce_and_cut  vcfregionreduce_pipe  vcfregionreduce_uncompressed  (+4 more)
src/: BedReader.h  LD.cpp  LeftAlign.cpp  LeftAlign.hpp  Variant.cpp  Variant.h  abba-baba.cpp  allele.cpp  allele.hpp  bFst.cpp  betaBinom.cpp  canonicalize.cpp  canonicalize.h  cdflib.cpp  cdflib.hpp  cigar.cpp  cigar.hpp  convert.h  dumpContigsFromHeader.cpp  genotypeSummary.cpp  gl-XPEHH.cpp  gpatInfo.hpp  hapLrt.cpp  iHS.cpp  index.cpp  index.hpp  join.h  legacy.cpp  legacy.h  makeUnique.h  meltEHH.cpp  mt19937ar.h  multichoose.h  murmur3.cpp  normalize-iHS.cpp  pFst.cpp  pVst.cpp  pdflib.cpp  pdflib.hpp  permuteGPAT++.cpp  (+110 more)
src/zig/: README.md  build.zig  compile.sh  samples.zig  test.zig  variant.zig  vcf.zig
test/: Makefile  libasan-suppress.txt
test/data/: issue_307_vcfnulldotslashdot.vcf
test/data/regression/: vcf2tsv_4.tsv  vcf2tsv_5.tsv  vcfallelicprimitives_4.vcf  vcfallelicprimitives_5.vcf  vcfallelicprimitives_6.vcf  vcfallelicprimitives_7.vcf  vcfallelicprimitives_8.vcf  vcfcreatemulti_3.vcf  vcfwave_4.vcf  vcfwave_5.vcf  vcfwave_6.vcf  y.fa  y.fa.fai  y.gfa  y.paf  y.vcf
test/doc/: performance.md
test/pytest/: pyvcflib.md  rtest.py  vcf2tsv-test.py  vcf2tsv.md  vcfallelicprimitives.md  vcfcreatemulti.md  vcffilter.md  vcfintersect.md  vcflib-api.md  vcfwave.md
test/scripts/: bin2md-template.erb  bin2md.rb  bin2mdidx-template.erb  gen-man-md-doctest-stub.rb  index-item.erb  md2man  scripts2md.rb  template.erb
test/tests/: main  mainTest.cpp  mainTest.cpp~  realign.py  variantFileTests.h  variantTests.h  variantTests.h~
tests/: vcfdistance.t
tests/lib/Local/vcflib/: Test.pm
